// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div>
  <header>
    <h1>
      Librería de Madrid
    </h1>
  </header>
  <nav>
    <table>
      <tbody>
        <tr>
          <td>
            <p
              onClick={[Function]}
            >
              Pagina de inicio
            </p>
          </td>
          <td>
            <p
              onClick={[Function]}
            >
              Listar los libros
            </p>
          </td>
          <td>
            <p
              onClick={[Function]}
            >
              Cadastrar nuevo libro
            </p>
          </td>
          <td>
            <p
              onClick={[Function]}
            >
              Atualizar el libro
            </p>
          </td>
          <td>
            <p
              onClick={[Function]}
            >
              Deletar el libro
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </nav>
  <main>
    <div>
      <h1>
        ¡Bienvenido a Librería de Madrid!
      </h1>
      <p>
        Elige las opciones arriba para navegar en nuestro sitio
      </p>
    </div>
  </main>
  <footer>
    <p>
      En construcción... No es un sitio oficial, sólo un sitio para practicar el uso de Spring (back-end) y React (front-end). ¡Cualquier feedback or sugerencias son muy bienvenidas! :D
    </p>
  </footer>
</div>
`;

exports[`Renders specific components should render delete book page 1`] = `
<div>
  <h1>
    Deletar el libro
  </h1>
  <form
    className="formulario"
  >
    <label>
      <span
        className="legend"
      >
        Pesquisar libro: 
      </span>
      <input
        className="inputForm"
        name="bookId"
        onChange={[Function]}
        type="number"
      />
    </label>
    <input
      className="submitButton"
      onClick={[Function]}
      type="submit"
      value="Pesquisar"
    />
  </form>
  <div
    className="message"
  >
    <p>
      Por favor seleciona un código del libro y clica en "Pesquisar".
    </p>
  </div>
</div>
`;

exports[`Renders specific components should render in construcction page 1`] = `
<p
  className="inConstruction"
>
  En construcción...
</p>
`;

exports[`Renders specific components should render list books page 1`] = `
<div>
  <h1>
    Lista de los libros
  </h1>
  <div>
    <div>
      <p
        className="loading"
      >
        Cargando...
      </p>
    </div>
  </div>
</div>
`;

exports[`Renders specific components should render new book page 1`] = `
<div>
  <h1>
    Cadastrar el nuevo libro
  </h1>
  <form
    className="formulario"
    onSubmit={[Function]}
  >
    <label>
      <span
        className="legend"
      >
        Título: 
      </span>
      <input
        className="inputForm"
        name="title"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
    <br />
    <label>
      <span
        className="legend"
      >
        Descripción: 
      </span>
      <input
        className="inputForm"
        name="description"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
    <br />
    <label>
      <span
        className="legend"
      >
        Autor: 
      </span>
      <input
        className="inputForm"
        name="author"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
    <br />
    <label>
      <span
        className="legend"
      >
        Edición: 
      </span>
      <input
        className="inputForm"
        name="edition"
        onChange={[Function]}
        type="number"
      />
    </label>
    <br />
    <input
      className="submitButton"
      type="submit"
      value="Cadastrar"
    />
  </form>
</div>
`;

exports[`Renders specific components should render update book page 1`] = `
<div>
  <h1>
    Atualizar el libro
  </h1>
  <form
    className="formulario"
  >
    <label>
      <span
        className="legend"
      >
        Pesquisar libro: 
      </span>
      <input
        className="inputForm"
        name="bookId"
        onChange={[Function]}
        type="number"
      />
    </label>
    <input
      className="submitButton"
      onClick={[Function]}
      type="submit"
      value="Pesquisar"
    />
  </form>
  <div
    className="message"
  >
    <p>
      Por favor seleciona un código del libro y clica en "Pesquisar".
    </p>
  </div>
</div>
`;

exports[`Renders specific components should render welcome page 1`] = `
<div>
  <h1>
    ¡Bienvenido a Librería de Madrid!
  </h1>
  <p>
    Elige las opciones arriba para navegar en nuestro sitio
  </p>
</div>
`;
